feat: add endpoint for deleting task
