# internal/api/routes/routes.go
@@ -15,6 +15,7 @@ func RegisterRoutes(router *gin.Engine, taskHandler *handlers.TaskHandler, userH
 		api.GET("/tasks/:id", taskHandler.GetTask)
 		api.GET("/users/:user_id/tasks", taskHandler.GetUserTasks)
 		api.PUT("/tasks/:id", taskHandler.UpdateTask)
+		api.DELETE("/tasks/:id", taskHandler.DeleteTask)
 
 		// User routes
 		api.POST("/users", userHandler.CreateUser)
